# SPECTER-AI-Powered-Offensive-Security-Terminal

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  SPECTER_AI_Concept_v2.md  __main__.py  docker-compose.yml  git_push.ps1  nano  pyproject.toml  requirements.txt  run.bat  run.sh  session.txt
.github/workflows/: ci.yml
Salida/: .env  Output  Output2.txt
docs/: index.md  mkdocs.yml
docs/arquitectura/: engine.md  mcp.md  overview.md  skills.md  workflows.md
docs/guia/: comandos.md  configuracion.md  instalacion.md
evidence/ENG-002/: EV-000001.json
evidence/ENG-003/: EV-000001.json  EV-000002.json
evidence/ENG-004/: EV-000001.json  EV-000002.json
evidence/ENG-006/: EV-000001.json
evidence/ENG-007/: EV-000001.json
evidence/ENG-008/: EV-000001.json  EV-000002.json
plugins/example_plugin/: __init__.py  plugin.yaml
sessions/: commands_llm.jsonl
specter/: __init__.py  workflows.py  workflows_advanced.py
specter/agents/: __init__.py  orchestrator.py
specter/cli/: __init__.py  main.py
specter/core/: __init__.py  audit.py  engine.py  session_manager.py  storage.py
specter/llm/: client.py  prompt_builder.py
specter/mcp/: registry.py  tool.py
specter/skills/: ad.py  forense.py  manager.py  osint.py  postex.py  recon.py  report.py  web.py
specter/utils/: __init__.py  errors.py
src/specter/: workflows.py  workflows_advanced.py
tests/: conftest.py  test_ad_skill.py  test_api.py  test_cli.py  test_command_router.py  test_core.py  test_e2e.py  test_engine.py  test_executor.py  test_guardrails.py  test_integration.py  test_llm.py  test_llm_handler.py  test_marketplace.py  test_mcp.py  test_osint_skill.py  test_permissions.py  test_postex_skill.py  test_professional.py  test_sandbox.py  test_session.py  test_skills.py  test_workflow.py
wordlists/: dictionaries.py
workflows/: osint_full.yaml
(+82 files in other folders)
